[package]
name = "checker"
version = "0.4.1"
authors = ["Yuhui Huang", "Yuze Fu <i@xfox.me>"]
edition = "2018"
publish = false

[dependencies]
csv = "1.3.0"
md5 = "0.7.0"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
thiserror = "1.0.49"
chrono = { version = "0.4.31", features = ["serde"] }

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "d5ec528843d29e3a52d745a64b469f810b2cedbf"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }
i686-pc-windows-msvc = { triplet = "x86-windows-static" }
